--- a/src/components/pages/offer/OfferPage.css
+++ b/src/components/pages/offer/OfferPage.css
@@ -1,23 +1,46 @@
 .offer-page {
-    padding: 20px 10;
-  }
-  
-  .offer-page h1 {
-    font-size: 36px;
-    color: #333;
-  }
-  
-  .offer-page .card {
-    transition: transform 0.1s;
-    will-change: transform;
-  }
-  
-  .offer-page .card:hover {
-    transform: scale(1.05);
-  }
+  padding: 20px 10;
+}
 
-  .offer-page .card img {
-    height: 250px;
-    object-fit: cover;
-  }
-  
+.offer-page h1 {
+  font-size: 36px;
+  color: #333;
+}
+
+.offer-page .card {
+  transition: transform 0.2s, box-shadow 0.2s;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.offer-page .card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* dodanie cienia podkreślającego kartę */
+}
+
+.offer-page .card img {
+  height: auto;
+  width: auto;
+  object-fit: cover;
+  transition: transform 0.2s; /* płynne skalowanie obrazu */
+}
+
+.offer-page .card-body {
+  text-align: center;
+}
+
+.offer-page .card-title {
+  font-size: 1.5rem;
+  margin-top: 10px;
+}
+
+.offer-page .card-text {
+  font-size: 1rem;
+  color: #666;
+}
+
+.offer-page {
+  padding: 20px 10;
+  margin-bottom: 40px; /* Dodanie marginesu dolnego, aby zwiększyć odstęp od stopki */
+}
