--- a/src/components/pages/contact/ContactPage.css
+++ b/src/components/pages/contact/ContactPage.css
@@ -1,5 +1,3 @@
-/* ContactPage.css */
-
 /* Stylizacja sekcji kontaktu */
 .contact-page {
   padding: 2rem 0;
@@ -21,7 +19,7 @@
 
 /* Podświetlenie pól formularza */
 .contact-page .form-control:focus {
- border-color: #b6dee7;
+  border-color: #b6dee7;
   color: #333;
 }
 
@@ -52,4 +50,21 @@
 /* Zwiększenie odległości między stopką a przyciskiem wysyłania */
 .contact-page .contact-footer-space {
   height: 40px;
+}
+
+/* Responsywność dla mniejszych ekranów */
+@media (max-width: 576px) {
+  .contact-page h1 {
+    font-size: 1.5rem;
+  }
+
+  .contact-page .form-control {
+    padding: 8px;
+    font-size: 14px;
+  }
+
+  .contact-page .promo-button {
+    padding: 5px 20px;
+    font-size: 14px;
+  }
 }
