--- a/src/components/pages/reservation/ReservationPage.css
+++ b/src/components/pages/reservation/ReservationPage.css
@@ -127,6 +127,7 @@
 .car-card {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 15px;
+  justify-content: space-between;
 }
 
 .car-features {
