--- a/src/components/layout/Layout.css
+++ b/src/components/layout/Layout.css
@@ -55,3 +55,14 @@
         font-size: 16px; /* Zmniejszenie rozmiaru czcionki dla małych ekranów */
     }
 }
+
+.navbar-nav .nav-item .nav-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .navbar-nav .nav-item .nav-link svg {
+    margin-left: 8px;
+  }
+  
